src/snek/snapshots/serpentine__snek__tests__argument_mismatch_builtin.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::argument_count

  x Expected 2 arguments got 1
   ,-[<redacted-path>:1:18]
 1 | export DEFAULT = Add(2);
   :                  ^|^
   :                   `-- This node expects 2 arguments
   `----
  help: Remember that chaining counts as a argument, `... > Foo(1, 2)` has 3 arguments passed for example.
