src/snek/snapshots/serpentine__snek__tests__argument_mismatch_custom.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::argument_count

  x Expected 1 arguments got 0
   ,-[/home/viv/coding/serpentine/test_cases/negative/argument_mismatch_custom.snek:5:18]
 4 | 
 5 | export DEFAULT = Double();
   :                  ^^^|^^
   :                     `-- This node expects 1 arguments
   `----
  help: Remember that chaining counts as a argument, `... > Foo(1, 2)` has 3 arguments passed for example.
