src/snek/snapshots/serpentine__snek__tests__double_return.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: 
  x Inlining function failed
  `-> compiler::double_return
      
        x Multiple returns
         ,-[/home/viv/coding/serpentine/test_cases/negative/double_return.snek:3:5]
       2 |     return Add(value, value);
       3 |     return Add(value, value);
         :     ^^^|^^
         :        `-- Second return after exsisting return.
       4 | }
         `----
      
   ,-[/home/viv/coding/serpentine/test_cases/negative/double_return.snek:6:18]
 5 | 
 6 | export DEFAULT = Double(10);
   :                  ^^^|^^
   :                     `-- In this call
   `----
