src/snek/snapshots/serpentine__snek__tests__export_function_in_function.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::invalid_statement

  x export not allowed in function
   ,-[<redacted-path>:2:5]
 1 | def Double(value) {
 2 |     export def Foo() {
   :     ^^^|^^
   :        `-- This statement is not allowed here
 3 |         return 10;
   `----
  help: Maybe you meant to use `return` instead?
