src/snek/snapshots/serpentine__snek__tests__export_import_in_function.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::invalid_statement

  x export not allowed in function
   ,-[<redacted-path>:2:5]
 1 | def Double(value) {
 2 |     export import "..<redacted-path>" as lib;
   :     ^^^|^^
   :        `-- This statement is not allowed here
 3 |     return Add(value, value);
   `----
  help: Maybe you meant to use `return` instead?
