src/snek/snapshots/serpentine__snek__tests__export_in_function.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: 
  x Inlining function failed
  `-> compiler::invalid_statement
      
        x export not allowed in function body
         ,-[/home/viv/coding/serpentine/test_cases/negative/export_in_function.snek:2:5]
       1 | def Double(value) {
       2 |     export result = Add(value, value);
         :     ^^^|^^
         :        `-- This statement is not allowed here
       3 | }
         `----
        help: return
      
   ,-[/home/viv/coding/serpentine/test_cases/negative/export_in_function.snek:5:18]
 4 | 
 5 | export DEFAULT = Double(10);
   :                  ^^^|^^
   :                     `-- In this call
   `----
