src/snek/snapshots/serpentine__snek__tests__item_not_found.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::item_not_found

  x 'ten' not found in scope
   ,-[/home/viv/coding/serpentine/test_cases/negative/item_not_found.snek:1:18]
 1 | export DEFAULT = ten;
   :                  ^|^
   :                   `-- Item with this name not found
   `----
