src/snek/snapshots/serpentine__snek__tests__item_not_found_import.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::item_not_found

  x 'secret' not found in scope
   ,-[<redacted-path>:3:23]
 2 | 
 3 | export DEFAULT = lib::secret;
   :                       ^^^|^^
   :                          `-- Item with this name not found
   `----
  help: Serpentine cannot reference items (including functions) before they are defined.
