src/snek/snapshots/serpentine__snek__tests__item_wrong_kind.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::wrong_item_kind

  x Expected a label
   ,-[<redacted-path>:1:24]
 1 | export DEFAULT = Image(Image);
   :                        ^^|^^
   :                          `-- This is a 'function'
   `----
